# praetor

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRAETOR_PRODUCT_BRIEF.md  PRAETOR_PRODUCT_BRIEF.zh-TW.md  PRODUCT_INTAKE.md  README.md  ROADMAP.md  SECURITY.md  compose.app.production.yaml  compose.app.yaml  compose.production.yaml  compose.yaml  pixi.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
branding/: README.md
bridges/praetor-execd/: README.md  config.example.yaml  pyproject.toml
bridges/praetor-execd/dev/: mock_executor.py
bridges/praetor-execd/openapi/: praetor-execd.openapi.yaml
bridges/praetor-execd/praetor_execd/: auth.py  config.py  executor_plugins.py  main.py  models.py  runner.py  service.py  store.py
bridges/praetor-execd/schemas/: config.schema.json  create_run_request.schema.json  run_event.schema.json  run_record.schema.json
docs/: ADVANCED_DEPLOYMENT.md  CHATGPT_SUBSCRIPTION_EXECUTOR.md  DEPLOYMENT_SECURITY_SPEC.zh-TW.md  DEVELOPER_SETUP.md  GITHUB_SETUP.md  INDEX.zh-TW.md  INSTALL_CHECKLIST.md  PRAETOR_BACKUP_RESTORE.md  PRAETOR_BRAND_SPEC.zh-TW.md  PRAETOR_COMMAND_CENTER_UX_PLAN.zh-TW.md  PRAETOR_EXECUTOR_BRIDGE_SPEC.zh-TW.md  PRAETOR_LOCAL_DEPLOY.md  PRAETOR_MEMORY_PROMOTION.md  PRAETOR_OPEN_SOURCE_SUCCESS_SPEC.zh-TW.md  PRAETOR_ORGANIZATION_OPERATING_SYSTEM.md  PRAETOR_PRIVACY_BOUNDARIES.zh-TW.md  PRAETOR_PUBLIC_SECURITY_REVIEW.zh-TW.md  PRAETOR_SURFACES_SPEC.zh-TW.md  (+8 more)
workers/runtime/: README.md  pyproject.toml
workers/runtime/praetor_runtime/: __init__.py  bridge_client.py
(+97 files in other folders)
